@@ -27,26 +27,18 @@ import java.awt.Graphics2D;
 import java.awt.GridBagConstraints;
 import java.awt.GridBagLayout;
 import java.awt.Insets;
-import java.awt.Point;
 import java.awt.RenderingHints;
-import java.awt.event.KeyListener;
 import java.awt.event.MouseListener;
-import java.util.ArrayList;
-import java.util.List;
 
+import javax.swing.BorderFactory;
 import javax.swing.ImageIcon;
 import javax.swing.JLabel;
 import javax.swing.JPanel;
 import javax.swing.JProgressBar;
-import javax.swing.JSlider;
 import javax.swing.SwingConstants;
-import javax.swing.plaf.basic.BasicSliderUI;
 
 import net.sourceforge.atunes.gui.images.Images;
-import net.sourceforge.atunes.model.ILookAndFeelChangeListener;
-import net.sourceforge.atunes.model.ILookAndFeelManager;
 import net.sourceforge.atunes.model.IProgressSlider;
-import net.sourceforge.atunes.utils.I18nUtils;
 import net.sourceforge.atunes.utils.StringUtils;
 import net.sourceforge.atunes.utils.TimeUtils;
 
@@ -62,24 +54,11 @@ public class ProgressSlider extends JPanel implements IProgressSlider {
 
 	private JLabel time;
 	private JLabel remainingTime;
-	private JSlider progressBar;
-	private JProgressBar indeterminateProgressBar;
+	private JProgressBar progressBar;
 
 	private boolean paintIcon = true;
 
 	private boolean paintIconAllowed;
-
-	private ILookAndFeelManager lookAndFeelManager;
-
-	private final List<MouseListener> mouseListeners = new ArrayList<MouseListener>();
-
-	/**
-	 * @param lookAndFeelManager
-	 */
-	public void setLookAndFeelManager(
-			final ILookAndFeelManager lookAndFeelManager) {
-		this.lookAndFeelManager = lookAndFeelManager;
-	}
 
 	/**
 	 * @param paintIconAllowed
@@ -101,35 +80,25 @@ public class ProgressSlider extends JPanel implements IProgressSlider {
 	public void initialize() {
 		this.time = new JLabel();
 		this.time.setHorizontalAlignment(SwingConstants.RIGHT);
-		// Need enough space to show time for long audio objects
-		this.time.setPreferredSize(new Dimension(100, 0));
+		setTimeSize(this.time);
 
-		this.progressBar = createSlider();
+		this.progressBar = new JProgressBar();
 		this.progressBar.setVisible(false);
-		this.lookAndFeelManager
-				.addLookAndFeelChangeListener((ILookAndFeelChangeListener) this.progressBar);
-
-		this.indeterminateProgressBar = new JProgressBar();
-		this.indeterminateProgressBar.setIndeterminate(true);
-		this.indeterminateProgressBar.setFocusable(false);
-		this.indeterminateProgressBar.setVisible(false);
-		this.indeterminateProgressBar.setBorderPainted(false);
+		this.progressBar.setFocusable(false);
+		this.progressBar.setBorder(BorderFactory.createEmptyBorder());
 
 		this.remainingTime = new JLabel();
 		this.remainingTime.setHorizontalAlignment(SwingConstants.LEFT);
-		// Need enough space to show time for long audio objects
-		this.remainingTime.setPreferredSize(new Dimension(100, 0));
+		setTimeSize(this.remainingTime);
 
 		setLayout();
 	}
 
-	private CustomSlider createSlider() {
-		CustomSlider progressBar = new CustomSlider();
-		progressBar.setToolTipText(I18nUtils.getString("CLICK_TO_SEEK"));
-		progressBar.setMinimum(0);
-		progressBar.setValue(0);
-		progressBar.setFocusable(false);
-		return progressBar;
+	private void setTimeSize(JLabel timeLabel) {
+		// Need enough space to show time for long audio objects
+		timeLabel.setPreferredSize(new Dimension(70, 0));
+		timeLabel.setMinimumSize(new Dimension(70, 0));
+		timeLabel.setMaximumSize(new Dimension(70, 0));
 	}
 
 	/**
@@ -177,13 +146,9 @@ public class ProgressSlider extends JPanel implements IProgressSlider {
 				showDeterminateControls, showIndeterminateControls));
 
 		this.progressBar.setVisible(showDeterminateControls
-				&& !showIndeterminateControls);
+				|| showIndeterminateControls);
 
-		if (showDeterminateControls && !showIndeterminateControls) {
-			this.indeterminateProgressBar.setVisible(false);
-		} else {
-			this.indeterminateProgressBar.setVisible(showIndeterminateControls);
-		}
+		this.progressBar.setIndeterminate(showIndeterminateControls);
 	}
 
 	/**
@@ -253,9 +218,8 @@ public class ProgressSlider extends JPanel implements IProgressSlider {
 		c.weightx = 1;
 		c.weighty = 0;
 		c.fill = GridBagConstraints.HORIZONTAL;
+		c.insets = new Insets(0, 15, 0, 15);
 		progressBarPanel.add(this.progressBar, c);
-		c.insets = new Insets(0, 50, 0, 50);
-		progressBarPanel.add(this.indeterminateProgressBar, c);
 		return progressBarPanel;
 	}
 
@@ -322,18 +286,7 @@ public class ProgressSlider extends JPanel implements IProgressSlider {
 
 	@Override
 	public synchronized void addMouseListener(final MouseListener l) {
-		this.mouseListeners.add(l);
 		this.progressBar.addMouseListener(l);
-	}
-
-	@Override
-	public synchronized void addKeyListener(final KeyListener l) {
-		this.progressBar.addKeyListener(l);
-	}
-
-	@Override
-	public void setEnabled(final boolean enabled) {
-		this.progressBar.setEnabled(enabled);
 	}
 
 	@Override
@@ -369,55 +322,6 @@ public class ProgressSlider extends JPanel implements IProgressSlider {
 
 			graphics.drawImage(icon.getImage(), width / 2 - icon.getIconWidth()
 					/ 2, 2, null);
-		}
-	}
-
-	private class CustomSlider extends JSlider implements
-			ILookAndFeelChangeListener {
-		/**
-		 * 
-		 */
-		private static final long serialVersionUID = -1159531192746462016L;
-
-		// Remove listeners that make slider to move across major ticks so
-		// knob is positioned immediately
-		// Code from
-		// http://stackoverflow.com/questions/518471/jslider-question-position-after-leftclick
-		{
-			reinstallTrackListeners();
-		}
-
-		@Override
-		public void lookAndFeelChanged() {
-			reinstallTrackListeners();
-		}
-
-		private void reinstallTrackListeners() {
-			for (MouseListener l : getMouseListeners()) {
-				removeMouseListener(l); // remove UI-installed TrackListener
-			}
-			BasicSliderUI.TrackListener tl = ((BasicSliderUI) getUI()).new TrackListener() {
-				// this is where we jump to absolute value of click
-				@Override
-				public void mouseClicked(final java.awt.event.MouseEvent e) {
-					Point point = e.getPoint();
-					if (point != null) {
-						setValue(((BasicSliderUI) getUI())
-								.valueForXPosition(point.x));
-					}
-				}
-
-				// disable check that will invoke scrollDueToClickInTrack
-				@Override
-				public boolean shouldScroll(final int dir) {
-					return false;
-				}
-			};
-			addMouseListener(tl);
-			// Reinstall mouse listeners
-			for (MouseListener l : ProgressSlider.this.mouseListeners) {
-				addMouseListener(l);
-			}
 		}
 	}
 }
