@@ -7,6 +7,7 @@ aTunes 3.2.0
 - New actions to move to next and previous playlist
 - New context panel showing current artist events
 - New action to show recommended events from Last.fm
+- UI improvement: use JProgressBar instead of JSlider to show and seek current audio object progress
 
 aTunes 3.1.1
 ------------
